--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "master-mind",
   "version": "0.1.0",
+  "homepage": "https://drbr.github.io/master-mind",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
