--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.1.2",
     "typestyle": "^2.1.0",
     "web-vitals": "^1.0.1"
